# machinevision-toolbox-python

./: .gitignore  CHANGELOG.md  Makefile  README.md  bag-of-words.html  blobs.html  blocks-camera.html  blocks.html  bundle-adjust.html  camera-catadiop.html  camera-central.html  camera-fisheye-1.py  camera-fisheye.html  camera-spherical.html  camera.html  color.html  connectivity.py  features2d.html  func_cm.html  func_color-1.py  func_color-2.py  func_color.html  func_data.html  func_graphics-4.py  func_graphics-6.py  func_graphics.html  func_imageio.html  func_peak.html  func_shapes.html  func_types.html  genindex.html  graphics.html  high-level.html  ilabel.py  ilabel.pyx  ilabeltest.py  image-algorithms.html  image.html  image_class.html  image_color.html  (+40 more)
.github/: copilot-instructions.md
_images/: inheritance-05bf5546b02b239aa4b6e7f973e5fbe20aa09d22.png.map  inheritance-0b7bd6f5c645c56402d8b67a77e7a923b0a55070.png.map  inheritance-0f9d23f51f1a930902a71b2641f7564a98f9ced3.png.map  inheritance-185249aa60e5cac25bb4b366a350853d1e658fd1.png.map  inheritance-210a287b7ff0b0317d2921a0a6edd1a4c4c49901.png.map  inheritance-30e96085cae59e8e8dd8eff6aebb76d18c9bef2b.png.map  inheritance-42004a03299d471ce07f9902f0668437b0a5a127.png.map  inheritance-4ddac4023b1e6c13c8378eef480876b449669a00.png.map  inheritance-5226f071c98bdbb52e4240238edc5ab9c06b5b4e.png.map  inheritance-5b9ab6a350cdfd28cdf4c1c4cbfc85d87cc025bc.png.map  inheritance-5e00373468f11bc2e3f00408fe4e64dd4aa367a0.png.map  inheritance-5f6f258ed01dee0f88d0d225479f7349b0bd2d5b.png.map  inheritance-64fc9abbadd540ac85ed80084d657d5a8dd8f4ff.png.map  inheritance-67249f7bc4978e8a2b8cd7583618b2a58f73d888.png.map  inheritance-679e0ca3291113711378304ed2398c0ca13f14e9.png.map  inheritance-6ab703fac30ddd65643a5522bd95ffcfd961e1bf.png.map  inheritance-705dfb3562d49f856120f8f628293f314529e786.png.map  inheritance-7141d46ae65282e4f210f02c94eff166f489f724.png.map  inheritance-72a274deb4fcc3eeb67b3083dcded3743f83956f.png.map  inheritance-76f19c8146783fe6a9b25eea4525ede7e97cbd44.png.map  inheritance-786717a6094d2970008fd56bc810f564d2841f4a.png.map  inheritance-7da0c8d48e5a56e6ce09e7b4bb59539f1d69b5f7.png.map  inheritance-8fca1597cb9e05d95ddfe6f2e76661e58303f976.png.map  inheritance-949f6cd057ab2063827a1eb343d5b927b5091998.png.map  inheritance-a7e11dd7514400081b5c26611ef8968bd76509ed.png.map  inheritance-b684f364381725476b178444ca9ba670f7890c9d.png.map  inheritance-bac9f3da433b10bed190aa0134f46c900982fb70.png.map  inheritance-bb029344a8fbbe818230a1e604757407fd1bd00c.png.map  inheritance-bf698bb7928a18e44fe4cba97adbdc147657c495.png.map  inheritance-c7752590a4535fe3ee2f72e2bbf4b9532653348f.png.map  inheritance-c80002412f1e08a0047bb795c177aaf68b06b8f5.png.map  inheritance-c81efb47dcee47379c0032807175d9cbb69d0186.png.map  inheritance-c912e03a83ef75a89e80f4342c6b881260fa32f7.png.map  inheritance-d5c21f09be19f4bf9b0494cd0b8efb080df4f2fb.png.map  inheritance-dcd6bde6a49cb04223886f4a1b5d48a832bd5f9a.png.map  inheritance-f4104c02dbebe2ecd833af87e11817a6282451cc.png.map  inheritance-fb7449da0999e5db62bde5702ef498e6576a1b31.png.map
_modules/: index.html
_sources/: blocks-camera.rst.txt  blocks.rst.txt  camera-spherical.rst.txt  camera.rst.txt  features2d.rst.txt  func_graphics.rst.txt  func_imageio.rst.txt  func_shapes.rst.txt  high-level.rst.txt  image_class.rst.txt  image_features.rst.txt  image_spatial.rst.txt  index.rst.txt  intro.rst.txt  kernel.rst.txt  low-level.rst.txt  morph.rst.txt  point-cloud.rst.txt  support-classes.rst.txt
docs/: Makefile  requirements.txt
examples/: README.md  blobs1.py  blobs2.py  bunny.py  color.py  corners.py  eg1.py  matching.py  monalisa.py  morphdemo.py  randomdots.py  ransac_line.py  readme.py  ros_stream.py  showzip.py  torch-yolo.py  torch_seg.py
exts/: module.html
machinevisiontoolbox/: BagOfWords.py  Blob.py  BundleAdjust.py  Camera.py  IImage.py  Image.py  ImageBlobs.py  ImageColor.py  ImageConstants.py  ImageCore.py  ImageFeatures.py  ImageFiducials.py  ImageIO.py  ImageLineFeatures.py  ImageMorph.py  ImageMultiview.py  ImagePointFeatures.py  ImageProcessing.py  ImageProcessingBase.py  ImageProcessingColor.py  ImageProcessingKernel.py  ImageProcessingMorph.py  ImageRegionFeatures.py  ImageReshape.py  ImageSpatial.py  ImageWholeFeatures.py  Images.py  NOTES FOR DORIAN.txt  PointCloud.py  Sift.py  Sources.py  Untitled.ipynb  VisualServo.py  __init__.py  blob.py  blobs.py  chap10.ipynb  classes.py  color.py  decorators.py  (+30 more)
mvtb-data/: Makefile  README.md  pyproject.toml  setup.py
mvtb-data/mvtbdata/: mvtb_load_image_data.py
mvtb-data/mvtbdata/data/: rgb.txt
mvtb-data/mvtbdata/images/mosaic/: NOTES
notebooks/: IBVS.ipynb  README.md  blob.ipynb  calibration.ipynb  calibration2d.ipynb  camera.ipynb  camera_animation.ipynb  clear_notebook_outputs.sh  color-images.ipynb  event_cameras.ipynb  exploring-images.ipynb  fiducials.ipynb  finding-blobs.ipynb  gamma.ipynb  greyscale-images.ipynb  homogeneous-coords.ipynb  homography.ipynb  image-convolution.ipynb  image-features2.ipynb  image-motion.ipynb  image-processing.ipynb  imageprocessing.ipynb  point-features.ipynb
stubs/: machinevisiontoolbox-Image-blue-1.py  machinevisiontoolbox-Image-green-1.py  machinevisiontoolbox-Image-hist-2.py  machinevisiontoolbox-Image-pad-1.py  machinevisiontoolbox-Image-red-1.py  machinevisiontoolbox-Image-showpixels-1.py  machinevisiontoolbox-Image-showpixels-2.py  machinevisiontoolbox-Image-showpixels-3.py  machinevisiontoolbox-Image-showpixels-4.py  machinevisiontoolbox.Camera.CatadioptricCamera.html  machinevisiontoolbox.Camera.CentralCamera.html  machinevisiontoolbox.Camera.FishEyeCamera.html  machinevisiontoolbox.Camera.SphericalCamera.html  machinevisiontoolbox.Image.A.html  machinevisiontoolbox.Image.AKAZE.html  machinevisiontoolbox.Image.BRISK.html  machinevisiontoolbox.Image.Circles.html  machinevisiontoolbox.Image.ComboFeature.html  machinevisiontoolbox.Image.Constant.html  machinevisiontoolbox.Image.DSI_refine.html  machinevisiontoolbox.Image.Harris.html  machinevisiontoolbox.Image.Harris_corner_strength.html  (+230 more)
(+895 files in other folders)
