[project]
name = "machinevision-toolbox-python"
version = "1.1.0"
authors = [
    { name = "Peter Corke", email = "rvc@petercorke.com" },
    { name = "Dorian Tsai" },
]
description = "Python tools for machine vision - education and research"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "machine vision",
    "computer vision",
    "multiview geometry",
    "stereo vision",
    "bundle adjustment",
    "visual servoing",
    "image features",
    "color",
    "blobs",
    "morphology",
    "image segmentation",
    "opencv",
    "open3d",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "opencv-python",
    "opencv-contrib-python",
    "spatialmath-python",
    "pgraph-python",
    "ansitable",
    "mvtb-data",
    "requests",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/petercorke/machinevision-toolbox-python"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
"Documentation" = "https://petercorke.github.io/machinevision-toolbox-python"
"GitHub Source" = "https://github.com/petercorke/machinevision-toolbox-python"
"Changelog" = "https://github.com/petercorke/machinevision-toolbox-python/blob/master/CHANGELOG.md"

[project.optional-dependencies]

# Options:
#  dev - development tools
#  docs - documentation building tools
#  jupyter - jupyter notebook support
#  open3d - open3d support (open3d generally won't work with latest Python)

dev = ["pytest", "coverage", "ruff"]

ros = ["rosbags", "roslibpy", "websockets"]

docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-favicon",
    "sphinx-copybutton",
    "sphinxcontrib-programoutput",
    "sphinx-autorun @ git+https://github.com/petercorke/sphinx-autorun.git",
]

jupyter = ["ipywidgets", "ipympl"]

open3d = ["open3d-python"]

torch = ["torch"]

[tool.pytest.ini_options]
pythonpath = ["src", "mvtb-data", "mvtb-data/mvtbdata"]
addopts = "--tb=short"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["machinevisiontoolbox"]

[tool.pyright]
include = ["src"]
ignore = ["docs", "tests", "examples"]

[project.scripts]
mvtbtool = "machinevisiontoolbox.bin.mvtbtool:main"
imtool = "machinevisiontoolbox.bin.imtool:main"
tagtool = "machinevisiontoolbox.bin.tagtool:main"
ocrtool = "machinevisiontoolbox.bin.ocrtool:main"
bagtool = "machinevisiontoolbox.bin.bagtool:main"
labeltool = "machinevisiontoolbox.bin.labeltool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/machinevisiontoolbox"]

[tool.hatch.build.targets.sdist]
exclude = ["/mvtb-data", "/docs", "/tests", "/.git", "/.github", "/figs"]

[tool.codespell]
# nd, enew = local variable names; nin, inports = BDSIM block identifiers
ignore-words-list = "nd,enew,nin,inports"
skip = "*.pyc,htmlcov"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
exclude = "camera_derivatives.py"

[tool.coverage.run]
omit = []
