[project]
name = "mvtb-data"
version = "1.6"
authors = [
  { name="Peter Corke", email="rvc@petercorke.com" },
]
description = "Data files for the Machine Vision Toolbox for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "python machine vision",
    "images",
    "image sequences",
]

[project.urls]
"Homepage" = "https://github.com/petercorke/machinevision-toolbox-python/mvtb-data"
"Bug Tracker" = "https://github.com/petercorke/machinevision-toolbox-python/issues"

[tool.setuptools.packages.find]
exclude = [
    "*bridge-*",
    "*__pycache__*",
]